test/compilation_errors/unable_to_resolve_symbol_hello.clj
(ns compilation_errors.unable_to_resolve_symbol_hello)

;(print Hello World)
print(Hello World)
